--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -13,12 +13,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  gdpr_dialog:
+    path: ../
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  gdpr_dialog:
-    path: ../
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
